# Rust365

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  SIGNING.md  build.rs
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  scorecard.yml
src/: docx.rs  docx_run.rs  htmlutil.rs  inflate.rs  main.rs  xml.rs  zip.rs
tests/: smoke.rs
